add kafka setup